--- a/java-code/configuration/test.properties
+++ b/java-code/configuration/test.properties
@@ -2,3 +2,28 @@ mvn.log.path=/export/Logs/code/
 mvn.log.level=debug
 mvn.log.eclp.level=debug
 mvn.log.other.level=debug
+# jdbc configuration
+mvn.jdbc.mysql.driver=com.mysql.jdbc.Driver
+mvn.jdbc.mysql.url=jdbc:mysql://10.1.1.101:3306/java_code1
+mvn.jdbc.mysql.username=java_code1
+mvn.jdbc.mysql.password=java_code1
+mvn.jdbc.mysql.url.other=jdbc:mysql://10.1.1.102:3306/java_code2
+mvn.jdbc.mysql.username.other=java_code2
+mvn.jdbc.mysql.password.other=java_code2
+# dbcp configuration
+mvn.dbcp.initialSize=5
+mvn.dbcp.maxActive=30
+mvn.dbcp.maxIdle=5
+mvn.dbcp.minIdle=2
+mvn.dbcp.maxWait=1000
+mvn.dbcp.defaultAutoCommit=false
+mvn.dbcp.timeBetweenEvictionRunsMillis=600000
+mvn.dbcp.numTestsPerEvictionRun=3
+mvn.dbcp.minEvictableIdleTimeMillis=1800000
+mvn.dbcp.testWhileIdle=true
+mvn.dbcp.testOnBorrow=false
+mvn.dbcp.testOnReturn=false
+mvn.dbcp.validationQuery=select 1
+mvn.dbcp.removeAbandoned=true
+mvn.dbcp.removeAbandonedTimeout=180
+mvn.dbcp.logAbandoned=true
