--- a/java-code/pom.xml
+++ b/java-code/pom.xml
@@ -15,6 +15,7 @@
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <spring.version>3.2.6.RELEASE</spring.version>
         <log4j.version>2.3</log4j.version>
+        <slf4j_version>1.7.25</slf4j_version>
     </properties>
 
     <modules>
