--- a/java-code/java-code-support/pom.xml
+++ b/java-code/java-code-support/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.5.3</version>
+        </dependency>
     </dependencies>
 
 </project>
