--- a/java-code/java-code-support/pom.xml
+++ b/java-code/java-code-support/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>commons-email</artifactId>
             <version>1.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.6.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
